# team-task-board

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  coverage.xml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2508ef10814e_add_cards_ordering_comments_activity.py  4b5eea0a6b38_add_unique_card_assignee_constraint.py  753f2ecaa444_add_notifications_table.py  7b43bde6b64e_create_projects_boards_columns.py  872aaa41e10e_reporting_caching_activity.py  a1268901a74f_add_notification_deduplication_key.py  a23966086a1c_reporting_and_caching_indexes.py  ba0cdc7f2fa7_add_guest_role.py  cbd098bbfc02_create_authentication_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: board_access.py  card_access.py  deps.py  rbac.py
backend/app/core/: board_cache.py  config.py  exceptions.py  logging.py  pagination.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/models/: __init__.py  activity.py  board.py  board_column.py  card.py  comment.py  enums.py  invitation.py  notification.py  org_member.py  organization.py  project.py  user.py
backend/app/repositories/: activity.py  base.py  boards.py  cards.py  columns.py  comments.py  notifications.py  organizations.py  projects.py  stats.py  users.py
backend/app/schemas/: activity.py  auth.py  board.py  card.py  column.py  comment.py  invitation.py  kanban.py  notification.py  organization.py  project.py  stats.py
backend/app/services/: activity.py  auth.py  boards.py  cards.py  columns.py  comments.py  invitations.py  notification_dispatch.py  notifications.py  organizations.py  projects.py  stats.py
backend/app/utils/: lexorank.py
backend/app/worker/: celery_app.py  db.py  email.py  tasks.py
backend/app/ws/: auth.py  events.py  manager.py  presence.py  publisher.py  pubsub.py  router.py
backend/scripts/: export_openapi.py
backend/team_task_board_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: conftest.py  test_board_cache_invalidation.py  test_board_members.py  test_card_assignee_membership.py  test_card_assignees.py  test_cards.py  test_health.py  test_invitations.py  test_notification_assignment.py  test_notification_deduplication.py  test_notification_mentions.py  test_notifications.py  test_ping.py  test_stats.py
backend/tests/unit/: test_card_event_publishing.py  test_card_service_events.py  test_comment_service_events.py  test_rbac.py  (+5 more)
(+263 files in other folders)
