[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-task-board-backend"
version = "0.1.0"
description = "Backend API for Team Task Board"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "email-validator>=2.3.0",
    "celery>=5.6.3",
    "psycopg[binary]>=3.3.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.10.0",

    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "testcontainers>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # import sorting
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # unused arguments
    "T20",    # print statements
    "ASYNC",  # async-related checks
    "RUF",    # Ruff-specific rules
]
ignore = [
    "B008",   # FastAPI Depends() often triggers this; acceptable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # pytest fixtures can appear unused
]
"alembic/**/*.py" = [
    "T20",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-celery>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "testcontainers>=4.14.2",
]
